--- a/punto3/makefile
+++ b/punto3/makefile
@@ -1,7 +1,7 @@
-grafica.png grafica1.png:datos.txt
+caos.pdf:datos.txt
 	python caos.py
 datos.txt:
-	c++ caos.cpp
-	./a.out>datos.txt
+	g++ -o caos.x caos.cpp
+	./caos.x>datos.txt
 
 
